--- a/grayscale.css
+++ b/grayscale.css
@@ -17,24 +17,68 @@ html {
     height: 100%;
 }
 
+black_text {
+    color: #000
+}
+
+.download-section{
+    width: 100%;
+    padding: 50px 0;
+    color: #000;
+    background-color: #fff;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    background-size: cover;
+    -o-background-size: cover;
+}
+
 h1 {
-    margin: 0 0 35px;
+    margin: 0 0 15px;
     font-family: Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
     font-weight: 700;
     letter-spacing: 1px;
     font-size: 10px;
+    color: #424141;
+    
 }
-h2,
-h3,
+h2{
+    margin: 0 0 10px;
+    font-family: Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
+    font-weight: 700;
+    letter-spacing: 1px;
+    font-size: 40px;
+    color: #424141;
+    
+}
+h3{
+    margin: 0 0 10px;
+    font-family: Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
+    font-weight: 700;
+    letter-spacing: 1px;
+    font-size: 15px;
+    color: #424141;
+    
+}
 h4,
 h5,
 h6 {
     margin: 0 0 35px;
-    text-transform: uppercase;
     font-family: Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
     font-weight: 700;
     letter-spacing: 1px;
 }
+
+p1 {
+    margin: 0 0 25px;
+    font-size: 18px;
+    line-height: 1.5;
+    color: #879294;
+}
+black_text{
+    
+    color: #000;
+}
+
 
 p {
     margin: 0 0 25px;
@@ -138,7 +182,7 @@ a:focus {
         -moz-transition: background .5s ease-in-out,padding .5s ease-in-out;
         transition: background .5s ease-in-out,padding .5s ease-in-out;
     }
-
+    
     .navbar-custom.top-nav-collapse {
         padding: 0;
         border-bottom: 1px solid rgba(255,255,255,.3);
@@ -153,7 +197,7 @@ a:focus {
     padding: 100px 0;
     text-align: center;
     color: #fff;
-    background: url(../img/intro-bg.jpg) no-repeat bottom center scroll;
+    background: url(../img/sunny.jpg) no-repeat bottom center scroll;
     background-color: #000;
     -webkit-background-size: cover;
     -moz-background-size: cover;
@@ -179,11 +223,11 @@ a:focus {
         height: 100%;
         padding: 0;
     }
-
-    .intro .intro-body .brand-heading {
     
+    .intro .intro-body .brand-heading {
+        
     }
-
+    
     .intro .intro-body .intro-text {
         font-size: 26px;
     }
@@ -229,34 +273,34 @@ a:focus {
     -moz-animation-timing-function: linear;
 }
 
-@-webkit-keyframes pulse {    
+@-webkit-keyframes pulse {
     0% {
         -webkit-transform: scale(1);
         transform: scale(1);
     }
-
+    
     50% {
         -webkit-transform: scale(1.2);
         transform: scale(1.2);
     }
-
+    
     100% {
         -webkit-transform: scale(1);
         transform: scale(1);
     }
 }
 
-@-moz-keyframes pulse {    
+@-moz-keyframes pulse {
     0% {
         -moz-transform: scale(1);
         transform: scale(1);
     }
-
+    
     50% {
         -moz-transform: scale(1.2);
         transform: scale(1.2);
     }
-
+    
     100% {
         -moz-transform: scale(1);
         transform: scale(1);
@@ -267,18 +311,6 @@ a:focus {
     padding-top: 100px;
 }
 
-.download-section {
-    width: 100%;
-    padding: 50px 0;
-    color: #fff;
-    background: url(../img/downloads-bg.jpg) no-repeat center center scroll;
-    background-color: #000;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    background-size: cover;
-    -o-background-size: cover;
-}
-
 #map {
     width: 100%;
     height: 200px;
@@ -287,13 +319,13 @@ a:focus {
 
 @media(min-width:767px) {
     .content-section {
-        padding-top: 250px;
+        padding-top: 150px;
     }
-
+    
     .download-section {
         padding: 100px 0;
     }
-
+    
     #map {
         height: 400px;
         margin-top: 250px;
@@ -340,7 +372,7 @@ ul.banner-social-buttons {
         margin-bottom: 20px;
         padding: 0;
     }
-
+    
     ul.banner-social-buttons li:last-child {
         margin-bottom: 0;
     }
